# content-guard

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
docs/: DOGFOOD_RESULTS.md  DOGFOOD_TEST_REPO.md  FIXTURES.md  GIT_PUBLIC_REPO_GUARD.md  MIGRATION.md  N8N_ADVISORY.md  N8N_VALIDATION_PACK.md  N8N_WORKFLOW_RECIPE.md  OPENCLAW_PLUGIN.md  PROJECT_BRIEF.md  PR_DRAFTS.md  REPORT_CONTRACT.md  SCOPE.md
examples/: pr-body.md  sample.md
examples/n8n-validation/: blocked-local-service.json  blocked-secret-token.json  clean-blog-post.json  clean-social-post.json  warn-review-email.json
openclaw-plugin/: README.md  index.mjs  openclaw.plugin.json  package.json
policies/: pr-draft.json  public-content.json  public-repo.json  public-repo.md
scripts/: dogfood-pr-boundary.sh
src/content_guard/: __init__.py  cli.py  engine.py  git_commits.py  git_scan.py  n8n_advisory.py  n8n_validate.py  policy.py  pr_draft.py  pr_prepare.py  publish_check.py  report.py  rules.py  types.py
src/content_guard/detectors/: __init__.py  opf.py
src/content_guard/policies/: openclaw-message.json  public-repo.json
tests/: __init__.py  test_cli.py  test_engine.py  test_rules.py
tests/fixtures/real_world/: allowed_localhost_example.md  clean_content.md  infrastructure_leak.md  pr_draft_leak.md  secret_leak.md
